base/src/main/java/com/example/base/error/handler/UiErrorHandler.kt
package com.example.base.error.handler

interface UiErrorHandler {

    fun handleError(error: Throwable)
}